# AIST-2110-Labs

./: classlist_scraper.py  pyproject.toml
src/week14/: week14_code.ipynb
src/week15/: week15_code.ipynb
src/week2/: week2_code.ipynb
