[project]
name = "inclasscode"
version = "0.1.0"
description = "Code examples for in-class demonstrations for AIST 2110 at Augusta University"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "IPython==9.5.0",
    "cryptography>=46.0.3",
    "ipykernel==6.30.1",
    "pytest>=8.4.2",
]
